--- a/ML_For_thesis.ipynb
+++ b/ML_For_thesis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# 1. Read excel\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -52,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "已生成 Donnees_v4.xlsx，Type 列已完成规范化。\n",
+      "Donnees_v4.xlsx，Type\n",
       "Type\n",
       "Process                                1214\n",
       "Cut off                                 909\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
@@ -433,6 +433,7 @@
    ],
    "source": [
     "import seaborn as sns\n",
+    "import numpy as np\n",
     "\n",
     "sns.set(style=\"whitegrid\")\n",
     "\n",
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -812,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
@@ -908,14 +909,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "原始数据量: 1880\n",
-      "删除后数据量: 1879\n"
+      "Original data size: 1880\n",
+      "Data size after deletion: 1879\n"
      ]
     }
    ],
@@ -930,63 +931,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Quantité Actif 原始 1/50/99 分位：\n",
+      "Quantité ActifOriginal 1st/50th/99th percentiles:\n",
       "0.01    0.000000e+00\n",
       "0.50    1.422429e+04\n",
       "0.99    8.500357e+06\n",
       "Name: Quantité Actif, dtype: float64\n",
-      "Quantité Actif_win 截尾后 1/50/99 分位：\n",
+      "Quantité Actif1st/50th/99th percentiles after _win trimming:\n",
       "0.01    0.000000e+00\n",
       "0.50    1.422429e+04\n",
       "0.99    8.477732e+06\n",
       "Name: Quantité Actif_win, dtype: float64\n",
       "\n",
-      "Quantité passif 原始 1/50/99 分位：\n",
+      "Quantité passifOriginal 1st/50th/99th percentiles:\n",
       "0.01    0.000000e+00\n",
       "0.50    1.780995e+04\n",
       "0.99    1.403482e+07\n",
       "Name: Quantité passif, dtype: float64\n",
-      "Quantité passif_win 截尾后 1/50/99 分位：\n",
+      "Quantité passif1st/50th/99th percentiles after _win trimming:\n",
       "0.01    0.000000e+00\n",
       "0.50    1.780995e+04\n",
       "0.99    1.378401e+07\n",
       "Name: Quantité passif_win, dtype: float64\n",
       "\n",
-      "Ecart quantité 原始 1/50/99 分位：\n",
+      "Ecart quantitéOriginal 1st/50th/99th percentiles:\n",
       "0.01   -542269.2724\n",
       "0.50     -1442.0300\n",
       "0.99    650821.8892\n",
       "Name: Ecart quantité, dtype: float64\n",
-      "Ecart quantité_win 截尾后 1/50/99 分位：\n",
+      "Ecart quantité1st/50th/99th percentiles after _win trimming:\n",
       "0.01   -528767.798128\n",
       "0.50     -1442.030000\n",
       "0.99    649240.104424\n",
       "Name: Ecart quantité_win, dtype: float64\n",
       "\n",
-      "Ecart valorisé 原始 1/50/99 分位：\n",
+      "Ecart valoriséOriginal 1st/50th/99th percentiles:\n",
       "0.01   -3.575607e+07\n",
       "0.50   -1.349086e+06\n",
       "0.99    3.302848e+07\n",
       "Name: Ecart valorisé, dtype: float64\n",
-      "Ecart valorisé_win 截尾后 1/50/99 分位：\n",
+      "Ecart valorisé1st/50th/99th percentiles after _win trimming:\n",
       "0.01   -3.553768e+07\n",
       "0.50   -1.349086e+06\n",
       "0.99    3.254102e+07\n",
       "Name: Ecart valorisé_win, dtype: float64\n",
       "\n",
-      "Ecart valorisé.1 原始 1/50/99 分位：\n",
+      "Ecart valorisé.1Original 1st/50th/99th percentiles:\n",
       "0.01   -3.479476e+07\n",
       "0.50    0.000000e+00\n",
       "0.99    3.214930e+07\n",
       "Name: Ecart valorisé.1, dtype: float64\n",
-      "Ecart valorisé.1_win 截尾后 1/50/99 分位：\n",
+      "Ecart valorisé.11st/50th/99th percentiles after _win trimming:\n",
       "0.01   -3.436488e+07\n",
       "0.50    0.000000e+00\n",
       "0.99    3.213532e+07\n",
@@ -1033,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -1107,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -1133,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -1187,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
@@ -1276,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -1314,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -1337,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -1371,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "y = df_filtered[\"Type\"]\n",
@@ -1412,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -1430,16 +1431,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## III.1 Divisé en ensembles d'entraînement/de test (échantillonnage stratifié)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## A. Régression logistique multiple"
+    "## Divisé en ensembles d'entraînement/de test (échantillonnage stratifié)"
    ],
    "metadata": {
     "collapsed": false
@@ -1447,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -1475,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
@@ -1509,8 +1501,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## A. Régression logistique multiple"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "# ====================\n",
@@ -1532,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stdout",
@@ -1569,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 41,
    "outputs": [
     {
      "name": "stdout",
@@ -1606,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 42,
    "outputs": [
     {
      "name": "stdout",
@@ -1632,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 43,
    "outputs": [
     {
      "name": "stdout",
@@ -1698,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "# ====================\n",
@@ -1720,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stdout",
@@ -1758,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "# ----------------------------\n",
@@ -1779,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 47,
    "outputs": [
     {
      "name": "stdout",
@@ -1810,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
@@ -1849,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 49,
    "outputs": [
     {
      "name": "stdout",
@@ -1875,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
@@ -1942,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "# ----------------------------\n",
@@ -1965,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
@@ -1997,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
@@ -2036,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 54,
    "outputs": [
     {
      "name": "stdout",
@@ -2062,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 55,
    "outputs": [
     {
      "name": "stdout",
@@ -2144,7 +2145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 56,
    "outputs": [
     {
      "name": "stdout",
@@ -2179,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 57,
    "outputs": [
     {
      "name": "stdout",
@@ -2216,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 58,
    "outputs": [
     {
      "name": "stdout",
@@ -2253,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 59,
    "outputs": [
     {
      "name": "stdout",
@@ -2288,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 60,
    "outputs": [
     {
      "name": "stdout",
@@ -2312,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "# ----------------------------\n",
@@ -2333,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -2364,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 63,
    "outputs": [
     {
      "name": "stdout",
@@ -2403,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 64,
    "outputs": [
     {
      "name": "stdout",
@@ -2436,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 65,
    "outputs": [],
    "source": [
     "# ----------------------------\n",
@@ -2459,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 66,
    "outputs": [
     {
      "name": "stdout",
@@ -2491,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 67,
    "outputs": [
     {
      "name": "stdout",
@@ -2530,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 68,
    "outputs": [
     {
      "name": "stdout",
